[tool.poetry]
name = "classlogging"
version = "1.0.2"
description = "Class-based logging facility"
license = "MIT"
authors = [
    "Artem Novikov <artnew@list.ru>",
]
readme = "README.md"
repository = "https://github.com/reartnew/classlogging"
classifiers = [
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
tox = "^4.3.5"
pytest-pylint = "^0.19.0"
pylint-quotes = "^0.2.3"
pytest-mypy = "^0.10.3"
pytest-black = "^0.3.12"
pytest-bandit = "^0.6.1"
tox-poetry = "^0.4.1"

[tool.pytest.ini_options]
testpaths = [
    "src",
    "tests",
]
addopts = """
--pylint
--mypy
--black
--bandit
"""
bandit_targets = ["src"]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
